// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`uni-app-x > tailwindcss3 index.uvue.ts case 1 > css 1`] = `
".mt-_32d43rpx_ {
    margin-top: 32.43rpx
}
.bg-_h322323_ {
    --tw-bg-opacity: 1;
    background-color: rgba(50, 35, 35, var(--tw-bg-opacity, 1))
}
.px-4 {
    padding-left: 1rem;
    padding-right: 1rem
}
.text-_h844343_ {
    --tw-text-opacity: 1;
    color: rgba(132, 67, 67, var(--tw-text-opacity, 1))
}
"
`;

exports[`uni-app-x > tailwindcss3 index.uvue.ts case 1 1`] = `
"
	const __sfc__ = defineComponent({
		data() {
			return {
				title: 'Hello'
			}
		},
		onLoad() {

		},
		methods: {

		}
	})

export default __sfc__
function GenPagesIndexIndexRender(this: InstanceType<typeof __sfc__>): any | null {
const _ctx = this
const _cache = this.$.renderCache
  return _cE("view", _uM({ class: "px-4" }), [
    _cE("view", _uM({ class: "mt-_32d43rpx_ bg-_h322323_" }), [
      _cE("text", _uM({ class: "text-_h844343_" }), _tD(_ctx.title), 1 /* TEXT */)
    ]),
    _cE("text", _uM({ class: "icebreaker" }), "icebreaker")
  ])
}
const GenPagesIndexIndexStyles = [_uM([["icebreaker", _pS(_uM([["color", "#844343"]]))]])]
"
`;

exports[`uni-app-x > uvue.ts case 0 1`] = `
"
const __sfc__ = defineComponent({
  data() {
    return {
      title: 'Hello'
    }
  },
  onLoad() {

  },
  methods: {

  }
})

export default __sfc__
function GenPagesIndexIndexRender(this: InstanceType<typeof __sfc__>): any | null {
const _ctx = this
const _cache = this.$.renderCache
return createElementVNode("view", utsMapOf({ class: "px-4" }), [
  createElementVNode("view", utsMapOf({ class: "mt-_32d43rpx_ bg-_h322323_" }), [
    createElementVNode("text", utsMapOf({ class: "text-_h844343_" }), toDisplayString(_ctx.title), 1 /* TEXT */)
  ]),
  createElementVNode("text", utsMapOf({ class: "icebreaker" }), "icebreaker")
])
}
const GenPagesIndexIndexStyles = [utsMapOf([["icebreaker", padStyleMapOf(utsMapOf([["color", "#844343"]]))]])]
"
`;

exports[`uni-app-x > uvue.ts case 1 > css 1`] = `
"/*! tailwindcss v4.1.4 | MIT License | https://tailwindcss.com */
.mt-_32d43rpx_ {
  margin-top: 32.43rpx;
}
.bg-_h322323_ {
  background-color: #322323;
}
.px-4 {
  padding-left: calc(var(--spacing) * 4);
  padding-right: calc(var(--spacing) * 4);
}
.text-_h844343_ {
  color: #844343;
}
"
`;

exports[`uni-app-x > uvue.ts case 1 1`] = `
"
const __sfc__ = defineComponent({
  data() {
    return {
      title: 'Hello'
    }
  },
  onLoad() {

  },
  methods: {

  }
})

export default __sfc__
function GenPagesIndexIndexRender(this: InstanceType<typeof __sfc__>): any | null {
const _ctx = this
const _cache = this.$.renderCache
return createElementVNode("view", utsMapOf({ class: "px-4" }), [
  createElementVNode("view", utsMapOf({ class: "mt-_32d43rpx_ bg-_h322323_" }), [
    createElementVNode("text", utsMapOf({ class: "text-_h844343_" }), toDisplayString(_ctx.title), 1 /* TEXT */)
  ]),
  createElementVNode("text", utsMapOf({ class: "icebreaker" }), "icebreaker")
])
}
const GenPagesIndexIndexStyles = [utsMapOf([["icebreaker", padStyleMapOf(utsMapOf([["color", "#844343"]]))]])]
"
`;
